data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2269.wast
;; 10. **Test Description**: Construct a block with conditional branches (`br_if`) based on complex logical conditions derived from combining multiple stack values.     - **Constraint Checked**: Validates handling of complex logical conditions and correct evaluation for branching.     - **Relation to Condition Evaluation**: Faulty logical evaluations or condition checks inevitably lead to incorrect branching decisions.

(assert_invalid
  (module (func $complex-condition-branching
    (block (result i32)
      (i32.const 1)
      (i32.const 2)
      (i32.add)
      (i32.const 3)
      (i32.eq)
      (br_if 0)
      (i32.const 42)
      (drop)
    )
  ))
  "type mismatch"
)